@@ -11,6 +11,8 @@
 * Added SKU generation.
 * Added support for SKU generation via a generator suggested in [PR#4](https://github.com/itthinx/woocommerce-product-generator/pull/4) by [Akshaya Rane akshaya-rane](https://github.com/akshaya-rane).
 * Added random stock assignment as suggested in [PR#2](https://github.com/itthinx/woocommerce-product-generator/pull/2) by [James Golovich jamesgol](https://github.com/jamesgol).
+* Stock assignment managed at variation level for variable products.
+* Added stock status assignment.
 * Added a small percentage of products is featured.
 * Added extra variation for a more ample price spread.
 * Fixed product post author assignment to use the plugin's post-generator user.
